<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tdbouk.udacity.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/main_page_title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/btn_one"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_one" />

            <Button
                android:id="@+id/btn_two"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_two" />

            <Button
                android:id="@+id/btn_three"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_three" />

            <Button
                android:id="@+id/btn_four"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_four" />

            <Button
                android:id="@+id/btn_five"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_five" />

            <Button
                android:id="@+id/btn_six"
                style="@style/myAppsButtonStyle"
                android:onClick="onButtonClick"
                android:text="@string/app_six" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>